--- a/WebApp/react-united-airlines/src/App.css
+++ b/WebApp/react-united-airlines/src/App.css
@@ -1,38 +1,116 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #fdfdfd;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.6;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+
+
+.btn-info {
+  border-color: #06aad8 !important;
+  background-color: transparent !important;
+  color: white !important;
+
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-info:not(.disabled).active {
+  border-color: #06aad8 !important;
+  background-color: #06aad8 !important;
+  color: white !important;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-info:hover {
+  border-color: #06aad8 !important;
+  background-color: #06aad8 !important;
+  color: white !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.myCard {
+  border-color: transparent !important;
+}
+
+.outline-btn {
+  border-color: #06aad8 !important;
+  background-color: transparent !important;
+  color: white !important;
+}
+
+
+.outline-link {
+
+  background-color: white !important;
+  color: #06aad8 !important;
+  font-weight: 600 !important;
+  border-color: #06aad8 !important;
+
+
+}
+
+.outline-link:hover {
+  border-color: #06aad8 !important;
+  background-color: #06aad8 !important;
+  color: white !important;
+}
+
+.outline-link:focus {
+  border-color: #06aad8 !important;
+  background-color: #06aad8 !important;
+  color: white !important;
+}
+
+
+
+.outline-btn:hover {
+  border-color: #06aad8 !important;
+  background-color: #06aad8 !important;
+  color: white !important;
+}
+
+.react-datetime-picker__inputGroup__input {
+  color: white !important;
+
+}
+
+svg {
+  stroke: white;
+}
+
+.react-datetime-picker__wrapper {
+  color: white !important;
+  border: 1px solid #06aad8 !important;
+  border-radius: 4px;
+
+}
+
+.myModal .react-datetime-picker__wrapper {
+  color: black !important;
+  border: 1px solid #06aad8 !important;
+  border-radius: 4px;
+}
+
+.myModal svg {
+  stroke: black;
+}
+
+.myModal .react-datetime-picker__inputGroup__input {
+  color: rgb(0, 0, 0) !important;
+}
+
+
+.BgStyle {
+  background: linear-gradient(rgba(129, 172, 238, 0.7),
+      rgba(2, 17, 49, 0.7)),
+    url(img/Horsens.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
